tests/ui/obs_forge.stderr
error[E0308]: mismatched types
 --> tests/ui/obs_forge.rs:5:16
  |
5 |         _seal: (),
  |                ^^ expected `Token`, found `()`

error[E0624]: associated function `new` is private
 --> tests/ui/obs_forge.rs:6:37
  |
6 |         at_least_once: AtLeastOnce::new(CheckpointId::new("obs-forge")),
  |                                     ^^^ private associated function
  |
 ::: src/store/delivery/observation.rs
  |
  |     pub(crate) fn new(checkpoint_id: CheckpointId) -> Self {
  |     ------------------------------------------------------ private associated function defined here
